183 ==> 429471 - User is prompted to remove face tags from images when image count is zero 0.
184 ==> 429551 - Many Tags Stored in Photos are not Inserted into digiKam's tag list When Photos are Read.
185 ==> 429664 - Windows file rename change case only fails badly.
186 ==> 429625 - Under Import, Add images and Add Folders options are not available.
187 ==> 429715 - When importing with the rename function, 'import selected' does not import files.
188 ==> 427107 - Geolocation data not written in jpeg files in v7.1.0.
189 ==> 429783 - Geolocation information lost on export and no EXIF tags generated in .JPG.
190 ==> 429787 - Delete Unassigned Tags: show list of the unassigned tags before deleting them,
191 ==> 429820 - Radio buttons vs. checkboxes for Tags Matching Condition "OR/AND" chooser.
192 ==> 429820 - Checkboxes should be radio buttons in Tags Matching Condition "OR/AND" chooser.
193 ==> 429827 - Clarify parent when creating new album (UI shows a mismatch).
194 ==> 429931 - Small Typo on web page.
195 ==> 429995 - Unexpected Media Server listening on *:8200 - Should have been informed / given the option during 1st run setup.
196 ==> 430056 - Rotating a photo confirms its unconfirmed face tags.
197 ==> 430094 - Crash when opening configure dialog.
198 ==> 430103 - Move gallery trash.
199 ==> 430132 - Some vertical videos are rotated sideways in preview player.
200 ==> 430147 - Search and escaping of database wildcard characters in filenames.
201 ==> 430134 - Face tags lost and captions mis-transferred after digiKam automatically renames a conflicting filename.
202 ==> 430189 - Can't login because I have no rights to access the Database.
203 ==> 430179 - Thumbnails sort order.
204 ==> 425746 - No thumbnails when importing photos from camera.
205 ==> 429116 - System crash under macOS 11 install. Does not load.
206 ==> 430451 - Building Fingerprint abruptly stops.
207 ==> 430427 - PSD files cannot be viewed. Thumbnails are OK.
208 ==> 